k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: cloud-refresh-petclinic
  labels:
    app: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 2
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: ttl.sh/kyle-boxboat/spring-petclinic@sha256:954c9ab4af40bee5dfc990458d5f1afbeaaa11bc52eb0a71d406fda2d0faf1fb
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 1024Mi
              cpu: 1000m
