k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: cloud-refresh-petclinic
spec:
  type: LoadBalancer
  selector:
    app: petclinic
  ports:
    - name: web
      port: 8080
      targetPort: 8080
