k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: cloud-refresh-petclinic
spec:
  ingressClassName: openshift-default
  rules:
    - host: app-petclinic.roks.cloud # non-existent domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  name: web
